<resources>
    <string name="app_name">Volleyball Score Keeper</string>
    <string name="home">Home</string>
    <string name="vs">VS</string>
    <string name="visitor">Visitor</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="set_1">Set 1</string>
    <string name="set_2">Set 2</string>
    <string name="set_3">Set 3</string>
    <string name="set_4">Set 4</string>
    <string name="set_5">Set 5</string>
    <string name="reset">RESET</string>
    <string name="red_cards">red cards</string>
    <string name="reset_score">reset score</string>
    <string name="reset_all">reset all</string>
    <string name="sets_won">Sets Won</string>
    <string name="yellow_cards">yellow cards</string>
</resources>