<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/scrollViewStyle">

    <LinearLayout
        style="@style/layoutStyle"
        android:layout_marginTop="@dimen/dimen16"
        android:orientation="vertical">

        <LinearLayout
            style="@style/layoutStyle"
            android:layout_marginBottom="@dimen/dimen50"
            android:orientation="horizontal">

            <TextView
                style="@style/textViewStyle1"
                android:layout_marginLeft="@dimen/dimen24"
                android:text="@string/home" />

            <TextView
                style="@style/textViewStyle1"
                android:layout_width="wrap_content"
                android:padding="@dimen/dimen4"
                android:text="@string/vs"
                android:textSize="@dimen/size24" />

            <TextView
                style="@style/textViewStyle1"
                android:text="@string/visitor" />
        </LinearLayout>

        <LinearLayout style="@style/layoutStyle">

            <TextView
                style="@style/textViewStyle2"
                android:text="@string/sets_won" />
        </LinearLayout>

        <LinearLayout
            style="@style/layoutStyle"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    style="@style/buttonStyle1"
                    android:layout_marginLeft="@dimen/dimen24"
                    android:onClick="addOnePointToHome" />

                <TextView
                    android:id="@+id/home_score"
                    style="@style/scoreViewStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dimen12"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/home_sets_won"
                    style="@style/setsWonScoreView" />

                <Button
                    style="@style/buttonStyle2"
                    android:onClick="addOneToSetsWonForHome" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/dimen12"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/visitor_sets_won"
                    style="@style/setsWonScoreView"
                    android:background="@color/indigo" />

                <Button
                    style="@style/buttonStyle2"
                    android:onClick="addOneToSetsWonForVisitor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/visitor_score"
                    style="@style/scoreViewStyle" />

                <Button
                    style="@style/buttonStyle1"
                    android:layout_marginRight="@dimen/dimen16"
                    android:onClick="addOnePointToVisitor" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/layoutStyle"
            android:layout_marginTop="@dimen/dimen32">

            <Button
                style="@style/buttonStyle2"
                android:layout_marginLeft="@dimen/dimen24"
                android:onClick="addOneToYellowCardsForHome"
                android:textSize="@dimen/size18" />

            <TextView
                android:id="@+id/yellow_card_home"
                style="@style/cardScoreViewStyle" />

            <TextView style="@style/textViewStyle3" />

            <TextView
                android:id="@+id/yellow_card_visitor"
                style="@style/cardScoreViewStyle" />

            <Button
                style="@style/buttonStyle2"
                android:onClick="addOneToYellowCardsForVisitor" />

        </LinearLayout>

        <LinearLayout
            style="@style/layoutStyle"
            android:layout_marginTop="@dimen/dimen8">

            <Button
                style="@style/buttonStyle2"
                android:layout_marginLeft="@dimen/dimen24"
                android:onClick="addOneToRedCardsForHome" />

            <TextView
                android:id="@+id/red_card_home"
                style="@style/cardScoreViewStyle"
                android:background="@color/redCard" />

            <TextView
                style="@style/textViewStyle3"
                android:text="@string/red_cards" />

            <TextView
                android:id="@+id/red_card_visitor"
                style="@style/cardScoreViewStyle"
                android:background="@color/redCard" />

            <Button
                style="@style/buttonStyle2"
                android:onClick="addOneToRedCardsForVisitor" />

        </LinearLayout>

        <LinearLayout
            style="@style/layoutStyle"
            android:layout_marginTop="@dimen/dimen70">

            <Button
                android:id="@+id/ResetButton1"
                style="@style/resetButtonStyle"
                android:onClick="resetScore" />

            <Button
                android:id="@+id/ResetButton2"
                style="@style/resetButtonStyle"
                android:layout_marginLeft="@dimen/dimen40"
                android:onClick="resetAll"
                android:text="@string/reset_all" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
